--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "weirweb/engine": "@dev"
+        "weirweb/engine": "@dev",
+		"weirweb/engine-model": "@dev"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.81",
@@ -26,6 +27,10 @@
         {
             "type": "path",
             "url": "../engine"
+        },
+        {
+            "type": "path",
+            "url": "../engine-model"
         }
     ]
 }
